--- a/HelloLeetCode/HelloLeetCode.vcxproj.filters
+++ b/HelloLeetCode/HelloLeetCode.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClInclude Include="Util\Util.h">
       <Filter>Util</Filter>
     </ClInclude>
+    <ClInclude Include="TwoSum.h">
+      <Filter>Q1_TwoSum</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
