--- a/HelloLeetCode/HelloLeetCode.vcxproj.filters
+++ b/HelloLeetCode/HelloLeetCode.vcxproj.filters
@@ -25,6 +25,9 @@
     <Filter Include="Q3_Longest_Substring_Without_Repeating_Characters">
       <UniqueIdentifier>{d9079b6c-0020-4640-9c8e-87410b1062e9}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Q4_Median_of_Two_Sorted_Arrays">
+      <UniqueIdentifier>{11112ea8-7273-4179-9ed9-ed9de9651416}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -46,6 +49,9 @@
     </ClInclude>
     <ClInclude Include="LengthOfLongestSubstring.h">
       <Filter>Q3_Longest_Substring_Without_Repeating_Characters</Filter>
+    </ClInclude>
+    <ClInclude Include="FindMedianSortedArrays.h">
+      <Filter>Q4_Median_of_Two_Sorted_Arrays</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
