--- a/HelloLeetCode/HelloLeetCode.vcxproj
+++ b/HelloLeetCode/HelloLeetCode.vcxproj
@@ -118,6 +118,7 @@
     <ClInclude Include="FindMedianSortedArrays.h" />
     <ClInclude Include="LengthOfLongestSubstring.h" />
     <ClInclude Include="LongestPalindrome.h" />
+    <ClInclude Include="ReverseInteger.h" />
     <ClInclude Include="TwoSum.h" />
     <ClInclude Include="Util\Util.h" />
     <ClInclude Include="ZigZagConversion.h" />
