--- a/HelloLeetCode/HelloLeetCode.vcxproj
+++ b/HelloLeetCode/HelloLeetCode.vcxproj
@@ -118,7 +118,8 @@
     <ClInclude Include="FindMedianSortedArrays.h" />
     <ClInclude Include="LengthOfLongestSubstring.h" />
     <ClInclude Include="LongestPalindrome.h" />
-    <ClInclude Include="Palindrome_Number.h" />
+    <ClInclude Include="PalindromeNumber.h" />
+    <ClInclude Include="RegularExpressionMatching.h" />
     <ClInclude Include="ReverseInteger.h" />
     <ClInclude Include="String2Integer.h" />
     <ClInclude Include="TwoSum.h" />
