--- a/HelloLeetCode/HelloLeetCode.vcxproj
+++ b/HelloLeetCode/HelloLeetCode.vcxproj
@@ -126,6 +126,8 @@
     <ClInclude Include="ReverseInteger.h" />
     <ClInclude Include="Roman2Integer.h" />
     <ClInclude Include="String2Integer.h" />
+    <ClInclude Include="ThreeSum.h" />
+    <ClInclude Include="ThreeSumClosest.h" />
     <ClInclude Include="TwoSum.h" />
     <ClInclude Include="Util\Util.h" />
     <ClInclude Include="ZigZagConversion.h" />
